examples/test/testpolicy5281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5281
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key9: value33
      key11: value13
      key33: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value15
          key45: value39
          key14: value38
      podSelector:
        matchLabels:
          key5: value10
